@@ -3,6 +3,7 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18317).
   * Support the -statistic option: replace each pixel with corresponding
     statistic from the neighborhood.
+  * Add support for -duplicate option.
 
 2011-03-18 6.6.8-6 Anthony Thyssen <A.Thyssen@griffith...>
   * Replaced Minus and Divide Composition methods with Dst and Src
